feat: add categories api endpoints and models
